# Utils

./: CMakeLists.txt
gtest/: gtest.cc  gtest_configreader.cc  gtest_listvector.cc
include/: configreader.h  filelogger.h  foldermanagement.h  listvector.h  scanfiles.h
src/: configreader.cc  filelogger.cc  foldermanagement.cc  includespdlog.cc  listvector.cc  scanfiles.cc
